# libfoo

./: CMakeLists.txt  build_tarballs.jl  foo.cpp
.devcontainer/: devcontainer.json
